--- a/css/codeup-design.css
+++ b/css/codeup-design.css
@@ -4,7 +4,7 @@
 /*font-family: 'Anton', sans-serif;*/
 /*font-family: 'Merienda', cursive;*/
 body {
-    background-color: #E6E6E6;
+    background-color: #F0F0F0;
 }
 
 
@@ -95,3 +95,62 @@ h3 {
     font-family: 'Abel', sans-serif;
 }
 
+.small-circle {
+    font-family: 'Abel', sans-serif;
+}
+
+.circle-list {
+    list-style: none;
+}
+
+.small-red {
+    background: #E6563B;
+    border-radius: 50%;
+    width: 18px;
+    height: 16px;
+    margin: 2px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font-family: 'Anton', sans-serif;
+    font-size: 10px;
+}
+
+.small-orange {
+    background: #EB9D3a;
+    border-radius: 50%;
+    width: 18px;
+    height: 16px;
+    margin: 2px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font-family: 'Anton', sans-serif;
+    font-size: 10px;
+}
+
+.small-green {
+    background: #7CB06C;
+    border-radius: 50%;
+    width: 18px;
+    height: 16px;
+    margin: 2px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font-family: 'Anton', sans-serif;
+    font-size: 10px;
+}
+
+.small-blue {
+    background: #00ABA9;
+    border-radius: 50%;
+    width: 18px;
+    height: 16px;
+    margin: 2px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font-family: 'Anton', sans-serif;
+    font-size: 10px;
+}
