--- a/css/codeup-design.css
+++ b/css/codeup-design.css
@@ -20,6 +20,10 @@ h3 {
     font-family: 'Anton', sans-serif;
 }
 
+h4 {
+    font-family: 'Anton', sans-serif;
+}
+
 .big-circles {
     display: flex;
     justify-content: center;
@@ -153,4 +157,13 @@ h3 {
     justify-content: center;
     font-family: 'Anton', sans-serif;
     font-size: 10px;
+}
+
+.mobile-phone {
+    width: 70px;
+    height: 70px;
+}
+
+.last-tweet {
+    padding-left: 105px;
 }
