--- a/css/codeup-design.css
+++ b/css/codeup-design.css
@@ -24,6 +24,13 @@ h4 {
     font-family: 'Anton', sans-serif;
 }
 
+h5 {
+    margin-top: 10px;
+    margin-left: 10px;
+    padding-right: 30px;
+    font-size: 25px;
+}
+
 .big-circles {
     display: flex;
     justify-content: center;
@@ -165,5 +172,5 @@ h4 {
 }
 
 .last-tweet {
-    padding-left: 105px;
+
 }
