Added text to big circles and fixed their layout

--- a/css/codeup-design.css
+++ b/css/codeup-design.css
@@ -94,8 +94,7 @@ h5 {
 
 .circle-row {
     display: flex;
-    justify-content: end;
-    margin-right: 12px;
+    justify-content: center;
 }
 
 .selected-work {
